Fix to use Arrays.astList instead of List.of which came in Java 9